# codex-usage-watch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  compatibility.yml  config.yml  documentation.yml
.github/workflows/: ci.yml  release.yml
docs/: ACCEPTANCE.md  INSTALL.md  MACOS.md  NATIVE_ADAPTER.md  PRIVACY.md  RELEASE.md  RELEASE_NOTES.md  SUPPORT.md  acceptance-record-stage15.example.json  acceptance-record-v1.schema.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: transcript.rs
hooks/: hooks.json
scripts/: backup-state.sh  build-codex-fork.sh  check-docs.sh  check-package-docs.sh  check-plugin.sh  check-versions.sh  generate-provenance.sh  install.sh  package-release.sh  release-gate.sh  scan-release-privacy.sh  smoke-install.sh  test-acceptance-records.sh  test-privacy-scan.sh  test-uninstall.sh  uninstall.sh  validate-acceptance-record.py  verify-artifact-behavior.sh  verify-install.sh  verify-release-lifecycle.sh
src/: calculate.rs  calibration.rs  compatibility.rs  hooks.rs  ingest.rs  lib.rs  main.rs  model.rs  persistence.rs  private_fs.rs  reset.rs  setup.rs
src/persistence/: backups.rs  calibration_state.rs  compatibility_state.rs  display.rs  migrations.rs  transcripts.rs  window_replay.rs
tests/: accounting.rs  calibration.rs  cli.rs  compatibility.rs  hooks.rs  ingestion.rs  live_transcript.rs  persistence.rs  reset.rs  setup.rs
tests/fixtures/: README.md  acceptance_record_valid.json  concurrent_a.jsonl  concurrent_b.jsonl  duplicate_events.jsonl  expiry.jsonl  malformed_final_line.jsonl  no_growth.jsonl  normal_growth.jsonl  real_dual_window.jsonl  real_weekly_only.jsonl  reset_ambiguous_five_only.jsonl  reset_early_full.jsonl  reset_early_full_non_decrease.jsonl  reset_interleaved_old_epoch.jsonl  reset_long_gap.jsonl  reset_missing_five_hour.jsonl  reset_natural_five_hour.jsonl  reset_natural_weekly.jsonl  reset_timestamp_jitter.jsonl  reset_weekly_then_paired.jsonl  reset_zero_then_growth.jsonl  weekly_reset.jsonl
