[package]
name = "codex-usage-watch"
version = "0.1.0-beta.2"
edition = "2024"
rust-version = "1.85"
description = "Local, non-blocking Codex usage awareness"
license = "MIT"
readme = "README.md"
repository = "https://github.com/snikmas/codex-watch"
homepage = "https://github.com/snikmas/codex-watch"
documentation = "https://github.com/snikmas/codex-watch#readme"
include = [
    "/src/**",
    "/tests/**",
    "/hooks/**",
    "/scripts/**",
    "/docs/**",
    "/.codex-plugin/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/Makefile",
]

[lib]
name = "codex_usage_watch"
path = "src/lib.rs"

[[bin]]
name = "codex-watch"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
