[package]
name = "codex-usage-watch-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
chrono = "0.4"
codex-usage-watch = { path = ".." }
libfuzzer-sys = "0.4"
tempfile = "3"

[[bin]]
name = "transcript"
path = "fuzz_targets/transcript.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
